# ros-isis

./: LICENSE  README.md
CBR/: descripcion.txt
CBR/CBRClient/: descripcion.txt
CBR/CBRClient/cbrClientDLA/: cbrClientDLA.c  cbrClientDLA.make
CBR/CBRClient/cbr_clientC/: Makefile  client.java  exeSample.sh  install.sh  libCbrClient.c  libCbrClient.h  libCbrClient.make  libCbrClient_Test.c  server.java  uninstall.sh
CBR/CBRServer/: CBRCompiler.java  Makefile  cbrServerClose.sh  cbrServerLaunch.sh  cbr_client.java  cbr_server.java  cbrclass.java  descripcion.txt  exeSample.sh  exeSampleCompilerCBR.sh  install.sh
CBR/CBRServer/probe2cbr/: Get_data.m  beginCBR.m  closeCBR.m  exe_sample.m  exe_sample_script.m  generateCBRDescriptor.m  probe2CBR.m  reduceNumberOfSensors.m  saveCaseCBR.m
carmen/: CMakeLists.txt  mainpage.dox  package.xml
carmen/bags/: map.pgm
carmen/launch/: move_base_gmapping_mfc.launch  realCARMEN.launch  realCARMEN.vcg
carmen/launch/collaborative_control/: CARMEN.inc  PTA-limpio.world  amcl_node.xml  base_local_planner_params.yaml  cc_server.launch  cc_subscriber.launch  collaborative_control.launch  costmap_common_params.yaml  leeme.txt  move_base.xml  single_robot.vcg  stageCARMEN_separated.launch  test_amcl.launch  willow-pr2-2.5cm.world
carmen/launch/gmapping/: map.pgm  map_server.xml  move_carmen_gmapping.launch  move_carmen_gmappingHOME.launch  move_carmen_gmapping_separated.launch  parametros_entrada.txt
carmen/launch/hokuyo/: SeparatedLaserFilters.launch  de-270a90cw.bag  hokuyo_front_filter.yaml  hokuyo_rear_filter.yaml  laserFilter.launch  laserFilters.launch  laserFusion_bag.launch  laserFusion_mixedScans.launch  laserFusion_separatedScans.launch  laserNodes.launch  laser_data.bag
carmen/models/: carmen.skp  carmen_clean.dae  carmen_clean.skp
carmen/nbproject/: Package-Default.bash  configurations.xml  project.xml
carmen/src/: CARMENnode.cpp  CARMENnode.h  CARMENnode0.cpp  ModbusSerial.cpp  ModbusSerial.h  SerialPort.cpp  SerialPort.h  modBusFuncs.c  serialPortFuncs.c  serialPortFuncs.h
collaborative_control/: CMakeLists.txt  mainpage.dox  package.xml
collaborative_control/launch/: cc_server.launch  cc_subscriber.launch  collaborative_control.launch
collaborative_control/msg/: cocon_m.msg
collaborative_control/nbproject/: Package-Default.bash  configurations.xml  project.xml
collaborative_control/src/: cc_subscriber.cpp  collaborative_control_rviz.cpp  collaborative_control_rviz_orig.cpp  collaborative_control_s_server.cpp
collaborative_control/srv/: collaborative_control_s.srv
control_joy/: CMakeLists.txt  mainpage.dox  package.xml
control_joy/launch/: carmen_joy.launch  test.launch
control_joy/nbproject/: Package-Default.bash  configurations.xml  project.xml
control_joy/src/: carmen_teleop_joy.cpp
efficiency/: CMakeLists.txt  mainpage.dox  package.xml
efficiency/launch/: efficiency2.launch  efficiency_server2.launch  efficiency_subscriber2.launch
efficiency/msg/: Efficiency_m.msg
efficiency/nbproject/: Package-Default.bash  configurations.xml  project.xml
efficiency/src/: Efficiency_s_server.cpp  Efficiency_s_server2.cpp  eff_subscriber.cpp  eff_subscriber2.cpp
efficiency/srv/: Efficiency_s.srv  Efficiency_s2.srv
rostage_isis/: .gitignore  CMakeLists.txt  README.md  package.xml
rostage_isis/msg_gen/cpp/include/new_stage_isis/: Range.h
rostage_isis/msg_gen/lisp/: Range.lisp  _package.lisp  _package_Range.lisp  new_stage_isis-msg.asd
rostage_isis/new/: CMakeLists.txt  Makefile
rostage_isis/src/: rostage_isis.cpp
rostage_isis/world/: CARMEN.inc  agevole.cfg  agevole.world  hokuyo.inc  hokuyo_new.inc  origen.inc  willow-roomba.world  willow-roomba_ranger_laser.world
rostage_isis/world/bitmaps/: origen.xcf
(+136 files in other folders)
